[project]
name = "checklists"
version = "0.1.0"
description = "A simple application for creating and managing checklists across web and mobile platforms."
authors = [
    {name = "Vijay Ram Raghuraman", email = "vijayrram.ae@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "uvicorn (>=0.34.2,<0.35.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
